--- a/app/src/main/res/layout/activity_timetableshow.xml
+++ b/app/src/main/res/layout/activity_timetableshow.xml
@@ -5,20 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Timetableshow"
-    android:orientation="vertical">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/classify"
-        android:textSize="45sp"
-        android:layout_marginBottom="12dp"
-        android:background="@color/lavender"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textStyle="italic"
-
+    android:orientation="vertical"
+    tools:ignore="ExtraText">
         />
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab"
         android:layout_width="match_parent"
