--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -27,6 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:id="@+id/navheadermail"
         android:text="srivastavasunny359@gmail.com"
         android:textColor="@color/white"
         android:textSize="16sp"
