--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="lavender">#8692f7</color>
-    <color name="sky_blue">#87CEEB</color>
+    <color name="grey">#aaa</color>
+    <color name="darkGrey">#ff424242</color>
+
 </resources>
