--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -12,6 +12,7 @@
     <ImageView
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:layout_marginTop="32dp"
         android:src="@drawable/applogo"
         tools:ignore="ContentDescription,ImageContrastCheck" />
 
