--- a/app/src/main/res/layout/rc_items.xml
+++ b/app/src/main/res/layout/rc_items.xml
@@ -8,7 +8,7 @@
     app:cardCornerRadius="20dp"
     android:layout_marginHorizontal="14dp"
     android:layout_marginVertical="15dp"
-    app:cardBackgroundColor="@color/lavender">
+    app:cardBackgroundColor="@color/my_primary">
 
     <RelativeLayout
         android:layout_width="wrap_content"
