--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view">
 
     <group>
 
         <item android:id="@+id/nav_home"
             android:icon="@drawable/baseline_home_24"
+            app:showAsAction="ifRoom"
             android:title="@string/home"/>
 
 
         <item android:id="@+id/settings"
             android:icon="@drawable/baseline_settings_24"
+            app:showAsAction="ifRoom"
             android:title="@string/settings"/>
 
         <item android:id="@+id/share"
+            app:showAsAction="always"
             android:icon="@drawable/baseline_share_24"
             android:title="@string/share"/>
 
 
         <item android:id="@+id/about"
             android:icon="@drawable/baseline_info_24"
+            app:showAsAction="always"
             android:title="@string/about_us"/>
 
 
