--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,20 @@
         <item name="android:statusBarColor">@color/lavender</item>
         <!-- Customize your theme here. -->
     </style>
+<!--        this is for night mode-->
+    <style name="nightswitch" parent="Theme.AppCompat.Light">
+        <item name="colorControlActivated">#8692f7</item>
+        <item name="android:colorForeground">#ff424242</item>
+        <item name="android:colorBackgroundFloating">#ff424242</item>
+
+    </style>
+
+<!--    this is for the notification-->
+    <style name="notification" parent="Theme.AppCompat.Light">
+        <item name="colorControlActivated">#8692f7</item>
+        <item name="android:colorForeground">#ff424242</item>
+        <item name="android:colorBackgroundFloating">#ff424242</item>
+
+    </style>
+
 </resources>
