--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
             android:layout_width="128dp"
             android:layout_height="128dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginVertical="32dp"
+            android:layout_marginVertical="22dp"
             android:src="@drawable/login"
             tools:ignore="ContentDescription,ImageContrastCheck" />
 
@@ -135,7 +135,25 @@
                 android:text="Create Account"
                 tools:ignore="HardcodedText" />
 
+
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/logingoogle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/lavenderborder"
+            android:drawableLeft="@drawable/google"
+            android:layout_below="@id/form_layout"
+            android:gravity="center"
+            android:padding="12dp"
+            android:text="Login with Google"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:cornerRadius="20dp"
+            tools:ignore="HardcodedText,RtlHardcoded,TextContrastCheck,UseCompatTextViewDrawableXml,VisualLintButtonSize" />
+
     </RelativeLayout>
 
 
